concord_macros/tests/dsl/fail/fail_generated_local_cache_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client GeneratedLocalCachePolicyApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    header "X-Leak" = cache.key()
    -> Text<String>
}

fn main() {}
